[tool.poetry]
name = "reposurf"
version = "0.1.0"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>", "Dario Carella <dario.kar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^19.12.2"
asyncio_redis = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
